# anyconfig

./: .gitignore  CMakeLists.txt  README.md
anyconfig/: CMakeLists.txt
anyconfig/include/: anyconfig  anyconfig.hpp  parser.hpp  types_decl.hpp
anyconfig/src/: anyconfig.cpp  parser.cpp
examples/: CMakeLists.txt  usage_example_1.cpp
